@@ -266,6 +266,9 @@ Console:
 -  transfer Lua_Extended.txt document to the website
    (part of modding guide).
 
+?  implement 2D array access: [x, y] --> [x][y]
+   --> there's a power patch for that
+
 
 ----------------------------------------------------------------
   DOOM and DOOM II
